# suspects

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  playwright.config.js
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml  release.yml
migrations/: 001_init.sql
src/: config.rs  db.rs  main.rs
src/game/: minigames.rs  mod.rs  narrator.rs  phases.rs  roles.rs  scaling.rs  state.rs  win.rs
src/rooms/: manager.rs
src/ws/: handler.rs  messages.rs
static/audio/gm/: manifest.json
static/host/: app.js  audio.js  index.html  style.css
static/i18n/: cs.json  de.json  en.json  kk.json  pl.json
static/player/: app.js  index.html  style.css
static/shared/: common.css  ws.js
tests/e2e/: game-flow.spec.js  report-generator.js
