[package]
name = "suspects"
version = "0.1.0"
edition = "2024"
description = "Suspects - A multiplayer Mafia party game"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.26"
